# 2025_04_13_OASIS_CellPainting

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.cursor/rules/: instructions.mdc
00_prepare_data/: 01_download_metadata.py  02_download_cellprofiler.py  03_format_cellprofiler.py  03_format_metadata.py  04_format_cellprofiler.py
01_snakemake/: .gitignore  Snakefile
01_snakemake/classifier/: __init__.py  aggregate_profiles.py  classify.py  hitcalls.py  regression.py
01_snakemake/concresponse/: __init__.py  ap.py  cmd_functions.R  compile_dist.py  compute_distances.R  fit_curves.R  fit_curves_meta.R  gmd_functions.R  plot_cp_curve.R  plot_meta_curve.R  select_pod.R
01_snakemake/inputs/annotations/: OASIS_BRDID_map.csv  refchemdb_oasis.parquet  v5_oasis_03Sept2024_simple.csv
01_snakemake/inputs/conf/: cellprofiler.json  cellprofiler_filt.json
01_snakemake/preprocessing/: __init__.py  feature_selection.py  io.py  metadata.py  normalize.py  outliers.py  stats.py  transform.py
01_snakemake/pycytominer/operations/: __init__.py  correlation_threshold.py  transform.py  variance_threshold.py
01_snakemake/rules/: classifier.smk  common.smk  concresponse.smk  processing.smk  visualize.smk
01_snakemake/visualize/: __init__.py  umaps.py
02_downstream_analysis/: 01_understand_exp_design.py
