[project]
name = "2025-04-13-oasis-cellpainting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.11.4",
    "copairs>=0.5.1",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "scanpy>=1.11.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.0",
]
