[project]
name = "2025-04-13-oasis-cellpainting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.11.4",
    "copairs>=0.5.1",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "ruff>=0.11.6",
    "scanpy>=1.11.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.0",
]

# Adapted from https://docs.astral.sh/ruff/configuration/
[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["D212", "E712"] # E712 is because of polars

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"
